# tesseract-launcher

./: CMakeLists.txt  README.md
src/: main.cpp  window_main.cpp  window_main.h
src/manifests/: argument_parser.h  library_parser.cpp  library_parser.h  rules_parser.cpp  rules_parser.h  version_definition.cpp  version_definition.h
src/utils/: json_utils.h  os_utils.h  web_utils.h
ui/: window_main.ui
